v1.0.0/modules/schema/pages/class/GovHydro4.adoc
= `GovHydro4`
:toclevels: 4


+++Hydro turbine and governor. Represents plants with straight-forward penstock configurations and hydraulic governors of the traditional 'dashpot' type.  This model can be used to represent simple, Francis/Pelton or Kaplan turbines.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydro4`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydro4`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovHydro4 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









































































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







































GovHydro4 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovHydro4 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovHydro4 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovHydro4 -> DiagramObject: DiagramObjects


GovHydro4 -> InstanceSet: InstanceSet


GovHydro4 -> Name: Names


GovHydro4 -> ChangeSetMember: PropertiesCIMDataObject


GovHydro4 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<at,`at`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>At</i>).  Typical value = 1,2.+++

| <<bgv0,`bgv0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 0 (<i>Bgv0</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0.+++

| <<bgv1,`bgv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 1 (<i>Bgv1</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0.+++

| <<bgv2,`bgv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 2 (<i>Bgv2</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,1.+++

| <<bgv3,`bgv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 3 (<i>Bgv3</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,667.+++

| <<bgv4,`bgv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 4 (<i>Bgv4</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,9.+++

| <<bgv5,`bgv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Kaplan blade servo point 5 (<i>Bgv5</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 1.+++

| <<bmax,`bmax`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum blade adjustment factor (<i>Bmax</i>)  (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 1,1276.+++

| <<db1,`db1`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

| <<db2,`db2`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

| <<dturb,`dturb`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine damping factor (<i>Dturb</i>).  Unit = delta P (PU of <i>MWbase</i>) / delta speed (PU).  Typical value for simple = 0,5, Francis/Pelton = 1,1, Kaplan = 1,1.+++

| <<eps,`eps`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

| <<gmax,`gmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum gate opening, PU of <i>MWbase</i> (<i>Gmax</i>) (&gt; GovHydro4.gmin).  Typical value = 1.+++

| <<gmin,`gmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum gate opening, PU of <i>MWbase</i> (<i>Gmin</i>) (&lt; GovHydro4.gmax).  Typical value = 0.+++

| <<gv0,`gv0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 0, PU gv (<i>Gv0</i>) (= 0 for simple).  Typical for Francis/Pelton = 0,1, Kaplan = 0,1.+++

| <<gv1,`gv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU gv (<i>Gv1</i>) (= 0 for simple, &gt; GovHydro4.gv0 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,4, Kaplan = 0,4.+++

| <<gv2,`gv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU gv (<i>Gv2</i>) (= 0 for simple, &gt; GovHydro4.gv1 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,5, Kaplan = 0,5.+++

| <<gv3,`gv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU gv (<i>Gv3</i>)  (= 0 for simple, &gt; GovHydro4.gv2 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,7, Kaplan = 0,7.+++

| <<gv4,`gv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU gv (<i>Gv4</i>)  (= 0 for simple, &gt; GovHydro4.gv3 for Francis/Pelton and Kaplan). Typical value for  Francis/Pelton = 0,8, Kaplan = 0,8.+++

| <<gv5,`gv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU gv (<i>Gv5</i>)  (= 0 for simple, &lt; 1 and &gt; GovHydro4.gv4 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,9, Kaplan = 0,9.+++

| <<hdam,`hdam`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Head available at dam (<i>hdam</i>).  Typical value = 1.+++

| <<model,`model`>>
| 0..1
| xref::enumeration/GovHydro4ModelKind.adoc[`GovHydro4ModelKind`]
| +++The kind of model being represented (simple, Francis/Pelton or Kaplan).+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<pgv0,`pgv0`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 0, PU power (<i>Pgv0</i>) (= 0 for simple).  Typical value = 0.+++

| <<pgv1,`pgv1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU power (<i>Pgv1</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,42, Kaplan = 0,35.+++

| <<pgv2,`pgv2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU power (<i>Pgv2</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,56, Kaplan = 0,468.+++

| <<pgv3,`pgv3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU power (<i>Pgv3</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,8, Kaplan = 0,796.+++

| <<pgv4,`pgv4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU power (<i>Pgv4</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,9, Kaplan = 0,917.+++

| <<pgv5,`pgv5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU power (<i>Pgv5</i>) (= 0 for simple). 
Typical value for Francis/Pelton = 0,97, Kaplan = 0,99.+++

| <<qnl,`qnl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++No-load flow at nominal head (<i>Qnl</i>).
Typical value for simple = 0,08, Francis/Pelton = 0, Kaplan = 0.+++

| <<rperm,`rperm`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Permanent droop (<i>Rperm</i>) (&gt;= 0).  Typical value = 0,05.+++

| <<rtemp,`rtemp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temporary droop (<i>Rtemp</i>) (&gt;= 0).  Typical value = 0,3.+++

| <<tblade,`tblade`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Blade servo time constant (<i>Tblade</i>) (&gt;= 0).  Typical value = 100.+++

| <<tg,`tg`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Gate servo time constant (<i>Tg</i>) (&gt; 0).  Typical value = 0,5.+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Pilot servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tr,`tr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Dashpot time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 5.+++

| <<tw,`tw`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Tw</i>) (&gt; 0).  Typical value = 1.+++

| <<uc,`uc`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Max gate closing velocity (<i>Uc</i>).  Typical value = 0,2.+++

| <<uo,`uo`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Max gate opening velocity (<i>Uo</i>).  Typical value = 0,2.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#at]
=== `at`
+++Turbine gain (<i>At</i>).  Typical value = 1,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.at`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv0]
=== `bgv0`
+++Kaplan blade servo point 0 (<i>Bgv0</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv1]
=== `bgv1`
+++Kaplan blade servo point 1 (<i>Bgv1</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv2]
=== `bgv2`
+++Kaplan blade servo point 2 (<i>Bgv2</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv3]
=== `bgv3`
+++Kaplan blade servo point 3 (<i>Bgv3</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,667.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv4]
=== `bgv4`
+++Kaplan blade servo point 4 (<i>Bgv4</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 0,9.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bgv5]
=== `bgv5`
+++Kaplan blade servo point 5 (<i>Bgv5</i>) (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bmax]
=== `bmax`
+++Maximum blade adjustment factor (<i>Bmax</i>)  (= 0 for simple, = 0 for Francis/Pelton).  Typical value for Kaplan = 1,1276.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.bmax`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#db1]
=== `db1`
+++Intentional deadband width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#db2]
=== `db2`
+++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dturb]
=== `dturb`
+++Turbine damping factor (<i>Dturb</i>).  Unit = delta P (PU of <i>MWbase</i>) / delta speed (PU).  Typical value for simple = 0,5, Francis/Pelton = 1,1, Kaplan = 1,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.dturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#gmax]
=== `gmax`
+++Maximum gate opening, PU of <i>MWbase</i> (<i>Gmax</i>) (&gt; GovHydro4.gmin).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gmin]
=== `gmin`
+++Minimum gate opening, PU of <i>MWbase</i> (<i>Gmin</i>) (&lt; GovHydro4.gmax).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv0]
=== `gv0`
+++Nonlinear gain point 0, PU gv (<i>Gv0</i>) (= 0 for simple).  Typical for Francis/Pelton = 0,1, Kaplan = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain point 1, PU gv (<i>Gv1</i>) (= 0 for simple, &gt; GovHydro4.gv0 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,4, Kaplan = 0,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain point 2, PU gv (<i>Gv2</i>) (= 0 for simple, &gt; GovHydro4.gv1 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,5, Kaplan = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain point 3, PU gv (<i>Gv3</i>)  (= 0 for simple, &gt; GovHydro4.gv2 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,7, Kaplan = 0,7.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain point 4, PU gv (<i>Gv4</i>)  (= 0 for simple, &gt; GovHydro4.gv3 for Francis/Pelton and Kaplan). Typical value for  Francis/Pelton = 0,8, Kaplan = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain point 5, PU gv (<i>Gv5</i>)  (= 0 for simple, &lt; 1 and &gt; GovHydro4.gv4 for Francis/Pelton and Kaplan). Typical value for Francis/Pelton = 0,9, Kaplan = 0,9.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#hdam]
=== `hdam`
+++Head available at dam (<i>hdam</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.hdam`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#model]
=== `model`
+++The kind of model being represented (simple, Francis/Pelton or Kaplan).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.model`
| Cardinality
| 0..1
| Type
| xref::enumeration/GovHydro4ModelKind.adoc[`GovHydro4ModelKind`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pgv0]
=== `pgv0`
+++Nonlinear gain point 0, PU power (<i>Pgv0</i>) (= 0 for simple).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv0`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain point 1, PU power (<i>Pgv1</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,42, Kaplan = 0,35.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain point 2, PU power (<i>Pgv2</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,56, Kaplan = 0,468.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain point 3, PU power (<i>Pgv3</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,8, Kaplan = 0,796.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain point 4, PU power (<i>Pgv4</i>) (= 0 for simple).
Typical value for Francis/Pelton = 0,9, Kaplan = 0,917.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain point 5, PU power (<i>Pgv5</i>) (= 0 for simple). 
Typical value for Francis/Pelton = 0,97, Kaplan = 0,99.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qnl]
=== `qnl`
+++No-load flow at nominal head (<i>Qnl</i>).
Typical value for simple = 0,08, Francis/Pelton = 0, Kaplan = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.qnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rperm]
=== `rperm`
+++Permanent droop (<i>Rperm</i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.rperm`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#rtemp]
=== `rtemp`
+++Temporary droop (<i>Rtemp</i>) (&gt;= 0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.rtemp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tblade]
=== `tblade`
+++Blade servo time constant (<i>Tblade</i>) (&gt;= 0).  Typical value = 100.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.tblade`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tg]
=== `tg`
+++Gate servo time constant (<i>Tg</i>) (&gt; 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tp]
=== `tp`
+++Pilot servo time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tr]
=== `tr`
+++Dashpot time constant (<i>Tr</i>) (&gt;= 0).  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#tw]
=== `tw`
+++Water inertia time constant (<i>Tw</i>) (&gt; 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#uc]
=== `uc`
+++Max gate closing velocity (<i>Uc</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.uc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#uo]
=== `uo`
+++Max gate opening velocity (<i>Uo</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydro4.uo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


